--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,15 +1,34 @@
-.wrap {
-  margin: auto;
-  width: 500px;
-  background-color: #F08080;
-  border: 6px double #008080;
-  padding: 10px 10px;
+body {
+  padding-top: 40px;
+  background: #eee;
+  font-family: Helvetica;
 }
 
-.title {
+.sidebar {
+  flex-basis: 1;
+  background: #F08080;
+  border: 6px double #008080;
+  margin-right: 30px;
+}
+
+.content  {
+  flex-basis: 2;
+  background-color: #F08080;
+  border: 6px double #008080;
+}
+
+.wrap {
+  display: flex;
+  margin: auto;
+  width: 700px;
+}
+
+.links {
+  text-decoration: none;
   font-family: Helvetica;
   color: #008080;
   padding-left: 10px;
   margin-top: 10px;
   letter-spacing: 1px;
+  font-weight: 700;
 }
