--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -6,10 +6,21 @@
   padding: 10px 10px;
 }
 
+.wrapper_title {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
+}
+
 .title {
   font-family: Helvetica;
   color: #008080;
   padding-left: 10px;
   margin-top: 10px;
   letter-spacing: 1px;
+}
+
+.active {
+  font-weight: bold;
+  color: #f50057;
 }
